--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "MIT"
 authors = ["simens_green"]
 description = "A small utility for manipulating the project version in Cargo.toml"
-keywords = ["git", "semver", "gitlab", "github", "tool", "automation"]
+keywords = ["git", "semver", "tool", "automation"]
 categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins"]
 readme = "README.md"
 repository = "https://github.com/simensgreen/cargo-incvec"
